--- a/Starter_Code 10/part_2_mars_weather_white_submission.ipynb
+++ b/Starter_Code 10/part_2_mars_weather_white_submission.ipynb
@@ -855,11 +855,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write the data to a CSV\n"
+    "# Write the data to a CSV\n",
+    "df.to_csv('output.csv')"
    ]
   },
   {
